Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.3, 4.7.1, 5.11.2, 5.12.0
-
None
-
205570 dd1a6308719929b0798447244b401376d983cfbf (qt/qtbase/dev)
Description
When closing a window that contains a QLineEdit that has a slot connected to its editingFinished() signal, it is possible to get this signal fired more than once depending on what the slot code is doing. If you show a messagebox inside the slot, then this will cause the signal to be emitted twice thus causing the messagebox to be shown twice.
This bug is still present in Qt mainline (4.6) - as shown by the attached sample code.
Attachments
Issue Links
- resulted in
-
QTBUG-94057 QLineEdit should be enter editing status when FocusIn
-
- Closed
-