src/widgets/widgets/qlineedit_p.h
@@ -151,7 +151,7 @@ public:
 
     QLineEditPrivate()
         : control(0), frame(1), contextMenuEnabled(1), cursorVisible(0),
-        dragEnabled(0), clickCausedFocus(0), hscroll(0), vscroll(0),
+        dragEnabled(0), clickCausedFocus(0), edited(0), hscroll(0), vscroll(0),
         alignment(Qt::AlignLeading | Qt::AlignVCenter),
         leftTextMargin(0), topTextMargin(0), rightTextMargin(0), bottomTextMargin(0),
         lastTextSize(0), mouseYThreshold(0)
@@ -176,6 +176,7 @@ public:
     bool inSelection(int x) const;
     QRect cursorRect() const;
     void setCursorVisible(bool visible);
+    void setText(const QString& text);
 
     void updatePasswordEchoEditing(bool);
 
@@ -202,6 +203,7 @@ public:
     uint cursorVisible : 1;
     uint dragEnabled : 1;
     uint clickCausedFocus : 1;
+    uint edited : 1;
     int hscroll;
     int vscroll;
     uint alignment;
